# beatoven

./: .gitattributes  AppController.h  CMakeLists.txt  README.md  appcontroller.cpp  appcontroller.h  appsettings.cpp  appsettings.h  databasemanager.cpp  databasemanager.h  folderscanner.cpp  folderscanner.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectsmanager.cpp  projectsmanager.h  settingsDialog.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
docs/internal/: BEAT_OVEN_PRODUCT_SPEC.md
model/: collaborator.cpp  collaborator.h  project.cpp  project.h  snapshot.cpp  snapshot.h
services/: appdatabase.cpp  appdatabase.h
